# BigDataFlink

./: .dockerignore  .gitignore  README.md  compose.yaml  promtail.yml
flink/: job.sql
grafana/provisioning/dashboards/: logs-dashboard.json
kui/: config.yml
producer/: CMakeLists.txt  Makefile  README.md  TODO.txt
producer/.devcontainer/: devcontainer.json
producer/.github/: dependabot.yml
producer/.github/workflows/: ci.yml
producer/configs/: config_vars.yaml  secure_data.json  static_config.yaml
producer/src/: csv_producer.cpp  csv_producer.hpp  main.cpp
producer/unittest/: kafka_test.cpp
producer_service/: Dockerfile  go.mod  main.go
source_data/: 01_init.sql
